# anime-over-ansi

./: Cargo.toml
ansi_lib/: Cargo.toml
ansi_lib/src/: encoder.rs  lib.rs  metadata.rs  packets.rs
color_lib/: Cargo.toml
color_lib/benches/: cie76_delta_e.rs  cie94_delta_e.rs
color_lib/src/: lib.rs
play/: Cargo.toml
play/src/: codec.rs  player.rs  subtitles.rs
tools/: Cargo.toml
tools/src/: codec.rs  lib.rs  pre_processor.rs  subtitles.rs
