[package]
name = "ansi_lib"
version = "0.1.0"
edition = "2018"

[dependencies]
derive_builder = "0.10.2"
simd-adler32 = "0.3.4"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.color_lib]
path = "../color_lib"

[dependencies.image]
version = "0.23.14"
default-features = false