[package]
name = "color_lib"
version = "0.1.0"
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
lab = "0.11.0"
rayon = "1.5.1"
kasi-kule = "0.3"

[dependencies.argmm]
git = "https://github.com/alisww/argmm"

[dependencies.image]
version = "0.23.14"
default-features = false

[dependencies.serde]
version = "1"
features = ["derive"]

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
rand = "0.8.4"

[[bench]]
name = "cie76_delta_e"
harness = false

[[bench]]
name = "cie94_delta_e"
harness = false